
[build-system]
requires = ["setuptools", "black"]
build-backend = "setuptools.build_meta"


[project]
name = "pyadm-toolkit"
version = "0.1.0"
authors = [
  { name = "Ole Kleinschmidt", email = "ok@datenreisende.org" },
]
description = "PyADM - Python Admin Toolkit. The swiss army knife for every engineer."
readme = "README.md"
requires-python = ">=3.10.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["python admin toolkit", "pyadm", "ldap", "activedirectory", "directoryserver", "elasticsearch", "opensearch", "proxmox", "pve"]
license = { file = 'LICENSE' }
scripts = { pyadm = 'pyadm.main:cli' }
dependencies = [
    "click",
    "ldap3",
    "elasticsearch",
    "opensearch-py",
    "tabulate",
    "proxmoxer"
]

[project.urls]
homepage = "https://github.com/okleinschmidt/pyadm"
bug_tracker = "https://github.com/okleinschmidt/pyadm/issues"
