[metadata]
name = pyadm
version = file: VERSION
author = Ole Kleinschmidt
author_email = ok@datenreisende.org
url = https://gitlab.com/datenreisende/python/pyadm
description = PyADM - Python Admin Toolkit. The swiss army knife for every engineer.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = python admin toolkit
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires = file: requirements.txt
python_requires = >=3.10.8

[options.package_data]
* = README.md, LICENSE, VERSION

[options.packages.find]
where = src

